# PlumeDynamics

./: .gitignore  CHANGELOG.rst  MANIFEST.in  README.md  README.rst  USAGE.md  environment.yml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml
notebooks/: 03202024-plume-BTO_revisit_analysis_func.ipynb
notebooks/BTO/: 03082024-plume-BTO.ipynb  03202024-plume-BTO_curvature.ipynb  03202024-plume-BTO_plume_metric-draft.ipynb  03202024-plume-BTO_plume_metric-draft3.ipynb  03202024-plume-BTO_plume_metric.ipynb  03202024-plume-area_analysis-template.ipynb  04092024-plume-velocity_analysis-template.ipynb
notebooks/SRO/: YG054_YichenGuo_06252024.json
notebooks/SRO/SRO_STO_Drexel_TSST/: 07152024-SRO_STO-growth_rate-make_ds.ipynb  07152024-SRO_STO-growth_rate_ml.ipynb  (+1 more)
notebooks/function_development/: 03152024-chemical_filter_sample_images.ipynb  04262024-BTO_mapping-analyze_velocity-why_use_core.ipynb  04262024-BTO_mapping-autoencoder.ipynb  07082024-SRO_STO-plume-intensity_profile_velocity.ipynb  PlotMetrics-2.ipynb  PlumeManagement.ipynb  download_plume_office.ipynb
notebooks/notebooks_backup/: PlotMetrics-2.ipynb
src/: AutoAlign.py  Curvature.py  HorizontalLineProfileAnalyzer.py  PlumeDataset.py  PlumeEvaluation.py  PlumeMetrics.py  Velocity.py  analyze_function.py  electric_properties.py  utils.py  viz.py  xrd_functions.py
src/DL/: build_model.py  hdf5_dataset.py  make_dataset.py  trainer.py
src/plume_dynamics/: __init__.py  analysis.py  electric_properties.py  metrics.py  plotting.py  profiles.py  velocity.py  visualization.py  workflow.py  xrd.py
tests/: conftest.py  test_imports.py
(+49 files in other folders)
