[metadata]
name = PlumeDynamics
description = Tools for loading, visualizing, and analyzing pulsed-laser-deposition plume dynamics.
author = Yichen Guo
author_email = yig319@lehigh.edu
maintainer = Yichen Guo
maintainer_email = yig319@lehigh.edu
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/yig319/PlumeDynamics
project_urls =
    Source = https://github.com/yig319/PlumeDynamics
    Tracker = https://github.com/yig319/PlumeDynamics/issues
    PyPI = https://pypi.org/project/PlumeDynamics/
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Image Processing

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src
python_requires = >=3.9

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
ml =
    pillow
    torch
    torchvision
xrd =
    xrayutilities
dev =
    pytest
    pytest-cov
    build
    twine

[tool:pytest]
addopts =
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths =
    tests
python_files =
    test_*.py
    *_test.py

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs

[pyscaffold]
version = 4.6
package = plume_dynamics
